# REST_api_with_axum

./: .env  Cargo.toml  README.md
migrations/: 20230730052514_task.sql
src/: errors.rs  main.rs
src/controllers/: task.rs
src/models/: task.rs
